<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.profile.ProfileActivity">

    <TextView
        android:id="@+id/txt_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_toStartOf="@+id/lbl_address_prmpt"
        android:text="@string/txt_city" />

    <TextView
        android:id="@+id/lbl_address_prmpt"
        android:layout_width="222dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/txt_signup_form_loc_prompt" />

    <EditText
        android:id="@+id/txtStreet"
        android:layout_width="236dp"
        android:layout_height="43dp"
        android:layout_alignStart="@+id/txt_country"
        android:layout_alignTop="@+id/lbl_address"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="Strand" />

    <TextView
        android:id="@+id/lbl_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_country"
        android:layout_alignEnd="@+id/txt_city"
        android:text="@string/txt_country" />

    <EditText
        android:id="@+id/txt_country"
        android:layout_width="236dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginTop="214dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="United Kingdom" />

    <TextView
        android:id="@+id/lbl_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_city"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="259dp"
        android:text="@string/txt_street" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="129dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="London" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="29dp"
        android:text="@string/btn_save" />
</RelativeLayout>